tests/linear/should_fail/T21278.hs
{-# LANGUAGE LinearTypes #-}
module T21278 where

data C a = forall p. C (a %p -> a)

f :: C a -> C a
f b = C (\x -> case b of C g -> g x)
